[package]
name = "emacs-org-link-parser"
version = "0.1.0"
authors = ["Lílian Ferreira de Freitas<lily.mosquitoes@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2021"
description = "Library for parsing Emacs Org-mode hyperlinks from a string"
readme = "README.md"
repository = "https://github.com/lily-mosquitoes/emacs-org-link-parser"
